# overlay-experiments

./: CLAUDE.md
literature/: LITERATURE_REVIEW.md
paper/: Adobe-Submission.tex  draft.tex  main.tex  old_proposal.tex  refs.bib
paper/template/: revision_draft.tex
scripts/: SIMULATION_REPORT.md  pyproject.toml  simulation.py
scripts/figures/: exp1_att_convergence.csv  exp1_dgp1_meta_logistic.csv  exp2_dgp2_tiktok_ml.csv  exp2_mte_identification.csv  exp3_dgp3_firmA.csv  exp3_dgp3_firmB.csv  exp3b_bounds_convergence.csv  exp4_mte_identification.csv  selection_ratio.csv  track_a_mte.csv  track_b_dgp1.csv  track_b_dgp2.csv  track_b_dgp3.csv  track_b_r1_hump.csv  track_b_r2_negtail.csv
temp/: change_log.md  non_used_motivations.md  prompt_history.md
